crates/integration-tests/src/tests/snapshots/integration_tests__tests__native_query__runs_native_query_with_a_single_variable_set.snap
---
source: crates/integration-tests/src/tests/native_query.rs
expression: "run_connector_query(Connector::SampleMflix,\nquery_request().variables([[(\"count\",\n3)]]).collection(\"title_word_frequency\").query(query().predicate(binop(\"_eq\",\ntarget!(\"count\"),\nvariable!(count))).order_by([asc!(\"_id\")]).limit(20).fields([field!(\"_id\"),\nfield!(\"count\")]),)).await?"
---
- rows:
    - _id: "#1"
      count: 3
    - _id: "'n"
      count: 3
    - _id: "'n'"
      count: 3
    - _id: (Not)
      count: 3
    - _id: "100"
      count: 3
    - _id: 10th
      count: 3
    - _id: "15"
      count: 3
    - _id: "174"
      count: 3
    - _id: "23"
      count: 3
    - _id: 3-D
      count: 3
    - _id: "42"
      count: 3
    - _id: "420"
      count: 3
    - _id: "72"
      count: 3
    - _id: Abandoned
      count: 3
    - _id: Abendland
      count: 3
    - _id: Absence
      count: 3
    - _id: Absent
      count: 3
    - _id: Abu
      count: 3
    - _id: Accident
      count: 3
    - _id: Accidental
      count: 3
