crates/integration-tests/src/tests/snapshots/integration_tests__tests__native_query__runs_native_query_with_function_representation.snap
---
source: crates/integration-tests/src/tests/native_query.rs
expression: "query(r#\"\n                query NativeQuery {\n                  hello(name: \"world\")\n                }\n            \"#).run().await?"
---
data:
  hello: world
errors: ~
