crates/integration-tests/src/tests/snapshots/integration_tests__tests__native_query__runs_native_query_without_input_collection_with_variable_sets.snap
---
source: crates/integration-tests/src/tests/native_query.rs
expression: "run_connector_query(Connector::SampleMflix,\nquery_request().variables([[(\"type\", \"decimal\")],\n[(\"type\",\n\"date\")]]).collection(\"extended_json_test_data\").query(query().predicate(binop(\"_eq\",\ntarget!(\"type\"),\nvariable!(type))).order_by([asc!(\"type\"),\nasc!(\"value\")]).fields([field!(\"type\"), field!(\"value\")]),)).await?"
---
- rows:
    - type: decimal
      value:
        $numberDecimal: "1"
    - type: decimal
      value:
        $numberDecimal: "2"
- rows:
    - type: date
      value:
        $date:
          $numberLong: "1637571600000"
    - type: date
      value:
        $date:
          $numberLong: "1724164680000"
